--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="sun">Hello</h1>
+    <h2 id=grass>Inhale, exhale</h2>
 
 
     <script src="./assets/script.js"></script>
