--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1 id="sun">Hello</h1>
+    <div class="p-3 mb-2 bg-primary text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <p>col1</p>
+          </div>
+          <div class="col-sm-8">
+            <h1 id="sun">Hello</h1>
+            <!-- <h2 id="grass">Inhale, exhale</h2> -->
+            <col2></col2>
+          </div>
+          <div class="col-sm-2">
+            <p>col3</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div>
-      <h2 id="grass">Inhale, exhale</h2>
-    </div>
+      <script src="./assets/script.js"></script>
 
-    <script src="./assets/script.js"></script>
   </body>
 </html>
