--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="p-3 mb-2 bg-primary text-white">
       <div class="container">
+        <div class="p-3 mb-2 bg-primary text-white $zindex-fixed: 1030-;">
         <div class="row">
           <div class="col-sm-2">
             <p>col1</p>
@@ -29,6 +29,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
       <script src="./assets/script.js"></script>
 
