--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="p-3 mb-2 bg-primary text-white $zindex-fixed: 1030-;">
       <div class="container">
-        <div class="p-3 mb-2 bg-primary text-white $zindex-fixed: 1030-;">
+
         <div class="row">
-          <div class="col-sm-2">
+          <div class="col-sm-2 col-md-1 col-lg-1">
             <p>col1</p>
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-8 col-md-10 col-lg-10">
             <h1 id="sun">Hello</h1>
             <!-- <h2 id="grass">Inhale, exhale</h2> -->
             <col2></col2>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2 col-md-1 col-lg-1">
             <p>col3</p>
           </div>
         </div>
       </div>
     </div>
     </div>
+  </div>
       <script src="./assets/script.js"></script>
 
   </body>
